crates/djls-python/tests/snapshots/corpus__repos__geonode__geonode__layers__templatetags__dataset_tags.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "geonode.layers.templatetags.dataset_tags::tag::get_all_resource_styles":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: resource
        required: true
        kind: Variable
        position: 0
    supports_as_var: true
  "geonode.layers.templatetags.dataset_tags::tag::get_sld_name_from_url":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: sld_url
        required: true
        kind: Variable
        position: 0
    supports_as_var: true
  "geonode.layers.templatetags.dataset_tags::tag::get_style_name_from_legend_url":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: legend_url
        required: true
        kind: Variable
        position: 0
    supports_as_var: true
filter_arities:
  "geonode.layers.templatetags.dataset_tags::filter::camelize":
    expects_arg: false
    arg_optional: false
  "geonode.layers.templatetags.dataset_tags::filter::crs_labels":
    expects_arg: false
    arg_optional: false
  "geonode.layers.templatetags.dataset_tags::filter::lower":
    expects_arg: false
    arg_optional: false
block_specs: {}
